2003-01-15  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/dia_image.h: 
	* lib/dia_image.c (dia_image_rgba_data): New function to get RGBA
	data as one chunk.  Documentation for the RGB data getting funcs.

	* lib/dialibartrenderer.c (draw_image): Correct rowstride handling
	(bug #103565)

2003-01-13  Steffen Macke <sdteffen@web.de>

	* lib/dia_image.c: dia_image_rgb_data() is working for
	non-alpha images now. Fixes #93762
	* Makefile.am: added makefile.msc to EXTRA_DIST
	
2003-01-10  Steffen Macke <sdteffen@web.de>

	* app/paginate_psprint.c: Closing print dialog when file
	could not be written. Fixes #84746
	
2003-01-04  Steffen Macke <sdteffen@web.de>

	* doc/custom-shapes: incomplete description of <svg:text>

2003-01-03  Steffen Macke <sdteffen@web.de>

	* makefile.msc(new): new makefile to create file
	structure suitable for running dia win32 under
	$(TOP)/dia/build/win32
	
2003-01-02  Steffen Macke <sdteffen@web.de>
	
	* lib/dia_svg.c: including stdlib.h
	* lib/makefile.msc: added gdk_pixbuf libs to linker
	* app/makefile.msc: added gdk_pixbuf libs, made libart
	libs compatible with gnuwin32 package
	
2003-01-01  Hans Breuer  <hans@breuer.org>

	* lib/font.c : more comment about global_size_one

	* app/menus.c : <control>[<shift>]A for plain gtk build too.

	* plug-ins/wmf/wmf.cpp : some type juggling to make 
	msvc7 happy

2002-12-31  Steffen Macke <sdteffen@web.de>

	* app/makefile.msc: added hint on how to enable console output
	
2002-12-17  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/standard/textobj.c (textobj_load): Get the handle type
	right, at least to be the same as when created.

2002-12-12  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/dialibartrenderer.c (draw_string): Removed extra 'is'.

2002-12-08  Hans Breuer  <hans@breuer.org>

	* app/commands.c : fixed bug #85315 'give diagram properties, 
	instead of no object selected error' almost a one-liner

	* app/splash.c : don't make having the logo pixmap
	mandatory. Fixes bug #96068. 
